fixes color on nav elements; adds lines in html for readability

--- a/chamber/styles/style.css
+++ b/chamber/styles/style.css
@@ -13,6 +13,7 @@ header, footer {
 }
 
 nav ul {
+  color: #f9f9f9;
   list-style: none;
   padding: 0;
 }
@@ -20,6 +21,10 @@ nav ul {
 nav ul li {
   display: inline;
   margin: 0 1em;
+}
+
+nav ul li a {
+  color: white;
 }
 
 main {
